--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
             <button class="theme-toggle" id="themeToggle" title="Theme wechseln">🌙</button>
 
             <div style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
-                <div style="display: flex; align-items: center; gap: 20px;">
-                    <div class="logo">
-                        <div>🌍</div>
-                        <h1>Translator & Writer</h1>
-                    </div>
+                <div class="logo">
+                    <div>🌍</div>
+                    <h1>Translator & Writer</h1>
+                </div>
 
-                    <!-- Puter Login -->
-                    <div class="puter-login-container">
-                        <button id="puterLoginBtn" class="btn-puter-login">
-                            <span id="puterLoginIcon">🔐</span>
-                            <span id="puterLoginText">Puter Login</span>
+                <!-- Tab Navigation -->
+                <div class="tab-container-header">
+                    <div class="tab-navigation">
+                        <button class="tab-button active" onclick="switchTab('translator')">
+                            <span class="tab-icon">🌍</span>
+                            <span class="tab-label">Translator</span>
                         </button>
-                        <div id="puterLoginStatus" class="puter-login-status" style="display: none;">
-                            <span class="status-indicator"></span>
-                            <span id="puterUsername"></span>
-                        </div>
+                        <button class="tab-button" onclick="switchTab('pwa')">
+                            <span class="tab-icon">📱</span>
+                            <span class="tab-label">PWA Info</span>
+                        </button>
                     </div>
                 </div>
-                
+
                 <!-- Translator Controls -->
                 <div class="controls" id="translatorControls">
                     <div class="language-controls">
@@ -262,20 +262,6 @@
             </div>
         </header>
 
-        <!-- Tab Navigation -->
-        <div class="tab-container">
-            <div class="tab-navigation">
-                <button class="tab-button active" onclick="switchTab('translator')">
-                    <span class="tab-icon">🌍</span>
-                    <span class="tab-label">Translator</span>
-                </button>
-                <button class="tab-button" onclick="switchTab('pwa')">
-                    <span class="tab-icon">📱</span>
-                    <span class="tab-label">PWA Info</span>
-                </button>
-            </div>
-        </div>
-
         <main class="main-content">
             <!-- Translator Tab -->
             <div id="translator-tab" class="tab-pane active">
@@ -433,6 +419,22 @@
             <div id="pwa-tab" class="tab-pane">
                 <div style="background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); padding: 20px; border-radius: 15px; margin: 0; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 20px;">🎯 PWA Features & Anleitung</h3>
+
+                    <!-- Puter Login Section -->
+                    <div style="background: rgba(102, 126, 234, 0.1); padding: 20px; border-radius: 10px; margin-bottom: 20px; border-left: 4px solid #667eea;">
+                        <h4 style="color: #667eea; margin-bottom: 15px;">🔐 Puter Cloud-Login</h4>
+                        <p style="margin-bottom: 15px;">Melde dich mit deinem Puter-Account an, um deine Einstellungen und Favoriten in der Cloud zu speichern.</p>
+                        <div class="puter-login-container" style="display: flex; flex-direction: row; align-items: center; gap: 15px; flex-wrap: wrap;">
+                            <button id="puterLoginBtn" class="btn-puter-login">
+                                <span id="puterLoginIcon">🔐</span>
+                                <span id="puterLoginText">Puter Login</span>
+                            </button>
+                            <div id="puterLoginStatus" class="puter-login-status" style="display: none;">
+                                <span class="status-indicator"></span>
+                                <span id="puterUsername"></span>
+                            </div>
+                        </div>
+                    </div>
 
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin: 15px 0;">
                         <div>
